[package]
name = "tzf-wasm"
version = "1.2.0"
edition = "2024"
description = "A wasm library for tzf-rs"
repository = "https://github.com/ringsaturn/tzf-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.114"
tzf-rs = { version = "1.2.0", features = ["export-geojson"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[dev-dependencies]
# wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
